--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-kogito-runtime/pom.xml
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-kogito-runtime/pom.xml
@@ -29,6 +29,7 @@
   <packaging>war</packaging>
   <name>Kie Workbench - Common - Stunner - BPMN Definition Set - Kogito Runtime</name>
   <description>Kie Workbench - Common - Stunner - BPMN Definition Set - Kogito Runtime</description>
+  <version>7.49.0-SNAPSHOT</version>
 
   <properties>
     <skipITs>false</skipITs>
@@ -215,6 +216,7 @@
       <artifactId>kie-wb-common-stunner-bpmn-marshalling</artifactId>
       <scope>provided</scope>
     </dependency>
+
     <dependency>
       <groupId>org.kie.workbench.stunner</groupId>
       <artifactId>kie-wb-common-stunner-bpmn-client</artifactId>
@@ -226,6 +228,7 @@
         </exclusion>
       </exclusions>
     </dependency>
+
     <dependency>
       <groupId>org.kie.workbench.stunner</groupId>
       <artifactId>kie-wb-common-stunner-backend-common</artifactId>
