--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/META-INF/ErraiApp.properties
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/META-INF/ErraiApp.properties
@@ -28,5 +28,6 @@
 # file, although it is rarely necessary. See the documentation at
 # https://docs.jboss.org/author/display/ERRAI/ErraiApp.properties
 # for details.
-errai.ioc.enabled.alternatives=org.kie.workbench.common.dmn.client.commands.clone.DMNDeepCloneProcess
+errai.ioc.enabled.alternatives=org.kie.workbench.common.dmn.client.commands.clone.DMNDeepCloneProcess \
+                               org.kie.workbench.common.dmn.client.api.ReadOnlyProviderImpl
 
