--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,4 +1,4 @@
-name: Build Chain [pull request]
+name: Build Chain
 
 on: [pull_request]
 
@@ -7,18 +7,23 @@ jobs:
     strategy:
       matrix:
         java-version: [8, 11]
+      fail-fast: false
     runs-on: ubuntu-latest
-    name: Build Pull Request
+    name: Maven Build
     steps:
-    - name: Build Chain ${{ matrix.java-version }}
-      id: build-chain   
-      uses: kiegroup/github-action-build-chain@v1.3
-      with:
-        parent-dependencies: 'kie-wb-playground'
-        child-dependencies: 'drools-wb'
-        build-command: 'mvn -e -nsu -Dfull clean install -Prun-code-coverage -Pwildfly -Dcontainer=wildfly -Dcontainer.profile=wildfly -Dintegration-tests=true -Dmaven.test.failure.ignore=true -Dwebdriver.firefox.bin=/opt/tools/firefox-60esr/firefox-bin -DjvmArgs="-Xms1g -Xmx5g"'
-        build-command-upstream: "mvn -e -T1C clean install -DskipTests -Dgwt.compiler.skip=true -Dgwt.skipCompilation=true -Denforcer.skip=true -Dcheckstyle.skip=true -Dspotbugs.skip=true -Drevapi.skip=true"
-        workflow-file-name: "pull_request.yml"
-      env:
-        GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"          
+      - name: Set up JDK
+        uses: actions/setup-java@v1
+        with:
+          java-version: ${{ matrix.java-version }}
+      - name: Build Chain ${{ matrix.java-version }}
+        id: build-chain
+        uses: kiegroup/github-action-build-chain@master
+        with:
+          parent-dependencies: 'kie-wb-playground'
+          child-dependencies: 'drools-wb'
+          build-command: 'mvn -e -nsu -Dfull clean install -Prun-code-coverage -Pwildfly -Dcontainer=wildfly -Dcontainer.profile=wildfly -Dintegration-tests=true -Dmaven.test.failure.ignore=true -Dwebdriver.firefox.bin=/opt/tools/firefox-60esr/firefox-bin -DjvmArgs="-Xms1g -Xmx5g"'
+          build-command-upstream: "mvn -e -T1C clean install -DskipTests -Dgwt.compiler.skip=true -Dgwt.skipCompilation=true -Denforcer.skip=true -Dcheckstyle.skip=true -Dspotbugs.skip=true -Drevapi.skip=true"
+          workflow-file-name: "pull_request.yml"
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
                                                                       
